# QuickCurses

./: .gitignore  CMakeLists.txt  TODO.txt  main.cpp
diagrams/Core/: AsyncTestsEngine
include/Core/: CompositeObject.hpp  CoreInterfaces.hpp  Dimension.hpp  Engine.hpp  Engine_base.hpp  EventLoop_base.hpp  MouseProcessor.hpp  Object.hpp  Object_base.hpp  Rectangle.hpp  RectanglesProcessor.hpp  SignalsProcessor.hpp  SubEngine.hpp  TextProcessor.hpp  ThreadPool.hpp  ThreadsafeList.hpp  ThreadsafeQueue.hpp
scripts/: chapt.sh
src/: CMakeLists.txt
src/Core/: CMakeLists.txt  Engine_base.cpp  EventLoop_base.cpp  Object_base.cpp  SubEngine.cpp  ThreadPool.cpp
tests/: CMakeLists.txt
tests/Core/: AsyncTestsEngine.hpp  CMakeLists.txt  ConcurrentTestsEngine.hpp  Dimension_TEST.cpp  Rectangle_TEST.cpp  TestingGoodies.hpp  ThreadPool_TEST.cpp  ThreadsafeList_TEST.cpp  ThreadsafeQueue_TEST.cpp  ncurses_TEST.cpp
tests/asyncTestEngine/: AsyncTestEngine.hpp  AsyncTestEngine_TEST.cpp  CMakeLists.txt  MilasceniousTests.cpp  ObjectProxy.hpp  Operation.hpp  ThreadsafeHashTable.hpp  ThreadsafeHashTable_TEST.cpp  exec.cpp
